--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+.*.sw?
+.sw?
 **/__pycache__/
 **/*.log
-bin/
-LAMMPS_DATA/
-LAMMPS_DATA_BOND/
-SIESTA_DATA/
+/LAMMPS_DATA/
+/LAMMPS_DATA_BOND/
+/SIESTA_DATA/
 
